Added documentation in README file & fixed swagger docs tags
