# docs/swagger.json
@@ -22,9 +22,17 @@
     "paths": {
         "/broadcaster/joinBBB": {
             "post": {
+                "description": "Join a BigBlueButton session",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Broadcaster"
+                ],
+                "summary": "Join BBB",
                 "parameters": [
                     {
                         "description": "Broadcaster Request",
